# django-whiteneuron

./: LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.scripts/: build.sh  tailwind.sh
whiteneuron/: __init__.py
whiteneuron/base/: admin.py  apps.py  filters.py  forms.py  middleware.py  modeladmin.py  models.py  sites.py  tasks.py  urls.py  utils.py  views.py
whiteneuron/base/management/commands/: init_admin.py  init_groupuser.py  init_guest.py
whiteneuron/base/migrations/: 0001_initial.py  0002_imagemodel_userprofile_user_avatar_user_biography_and_more.py
whiteneuron/base/static/base/css/: loading.css
whiteneuron/base/templates/admin/base/: image_change_form.html  userprofile_change_form.html
whiteneuron/base/templatetags/: unfold_list_custom.py  wn_filters.py
whiteneuron/contrib/wn_import_export/: __init__.py  admin.py  constants.py  mixins.py  tasks.py  utils.py
whiteneuron/contrib/wn_modeltranslation/: __init__.py  admin.py  utils.py
whiteneuron/dashboard/: apps.py  views.py
whiteneuron/feedbacks/: admin.py  apps.py  models.py  urls.py  utils.py
whiteneuron/feedbacks/migrations/: 0001_initial.py  0002_feedbackdata_created_by_feedbackdata_deleted_at_and_more.py  0003_feedbackdata_note.py
whiteneuron/feedbacks/templates/admin/: change_list.html  login.html  submit_line.html
whiteneuron/file_management/: admin.py  apps.py  models.py  utils.py
whiteneuron/file_management/migrations/: 0001_initial.py  0002_alter_excelfile_options_alter_pdffile_options_and_more.py
whiteneuron/static/base/css/: btn-styles.css  styles.css
whiteneuron/static/base/js/: loading.js
whiteneuron/templates/admin/: base.html  change_list.html  grid_view_results.html  index.html  search_form.html
whiteneuron/templates/admin/base/: email_password.html
whiteneuron/templates/admin/feedbacks/: feedback_change_form.html
whiteneuron/templates/unfold/layouts/: skeleton.html
(+3 files in other folders)
